--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "dotenv": "^16.4.5",
     "fa": "^1.0.1",
+    "formidable": "^3.5.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.456.0",
     "mongoose": "^8.9.2",
+    "multer": "^1.4.5-lts.1",
     "next": "15.0.3",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
