--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "remove.bg": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
